<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_default_16dp"
    android:layout_marginEnd="@dimen/margin_default_16dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/default_url"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_8dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_start_loading"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_url"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_words_counts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_default_16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/item_word_count"
        android:visibility="visible"/>

</android.support.constraint.ConstraintLayout>